# zerobrew

./: LINUX_BENCHMARKS.md  LINUX_COMPAT.md  MIGRATION.md  PERF_IMPROVEMENTS.md  README.md  ROADMAP.md  TEST_RESULTS.md  bench_node.sh  benchmark-results.txt  benchmark.sh  build_rs_cov.profraw  install.sh  progress.txt
.github/workflows/: ci.yml  release.yml
docs/: TESTING_ASYNC_IO_PROPOSAL.md
zb_bench/src/: main.rs
zb_cli/: Cargo.toml
zb_cli/src/: display.rs  main.rs
zb_cli/src/commands/: bundle.rs  deps.rs  doctor.rs  info.rs  install.rs  mod.rs  services.rs  tap.rs  update.rs  upgrade.rs
zb_cli/src/commands/services/: control.rs  list.rs  mod.rs
zb_cli/tests/: integration_info.rs  integration_services.rs
zb_core/: Cargo.toml
zb_core/fixtures/: formula_linux.json
zb_core/src/: bottle.rs  errors.rs  formula.rs  formula_parser.rs  lib.rs  resolve.rs  version.rs
zb_io/: Cargo.toml
zb_io/src/: api.rs  blob.rs  build.rs  bundle.rs  cache.rs  db.rs  download.rs  extract.rs  install.rs  lib.rs  link.rs  materialize.rs  patchelf.rs  search.rs  services.rs  store.rs  tap.rs  test_utils.rs  traits.rs
zb_io/src/install/: doctor.rs  executor.rs  mod.rs  orphan.rs  planner.rs  tests.rs  upgrade.rs
zb_io/tests/: linux_integration.rs
