[package]
name = "zb_cli"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[[bin]]
name = "zb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
console = "0.15"
serde_json = "1"

zb_core = { path = "../zb_core" }
zb_io = { path = "../zb_io" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
wiremock = "0.6"
zb_io = { path = "../zb_io", features = ["test-utils"] }
