[package]
name = "zb_core"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tree-sitter = "0.24"
tree-sitter-ruby = "0.23"
regex = "1"

[dev-dependencies]
proptest = "1.4"
